--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "redux": "4.0.5",
+    "react-redux": "7.2.3",
+    "redux-thunk": "2.3.0"
+  },
+  "devDependencies": {
+    "react-redux": ""
   },
   "scripts": {
     "start": "react-scripts start",
