--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1",
-    "redux": "4.0.5",
-    "react-redux": "7.2.3",
-    "redux-thunk": "2.3.0"
-  },
-  "devDependencies": {
-    "react-redux": ""
+    "redux": "^4.0.5",
+    "redux-thunk": "2.3.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
